[package]
name = "qrwlock"
version = "0.1.0"
edition = "2021"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = {version = "0.9.4", features = ["ticket_mutex"] }
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.8.5"
